--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "body-parser": "^1.20.2",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "jszip": "^3.10.1",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "sharp": "^0.33.4",
     "tsx": "^4.3.0",
     "typescript": "^5.3.2",
     "vite-express": "*"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.9.3",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.2.16",
